--- a/corpu/course-message.html
+++ b/corpu/course-message.html
@@ -436,7 +436,7 @@
 								</div>
 							</div>
 							<div class="course-share ">
-								<a href="javascript:;" class="btn btn-primary">Account Settings</a>
+								<a href="javascript:" class="btn btn-primary">Account Settings</a>
 							</div>
 						</div>
 					</div>
@@ -470,10 +470,10 @@
 									<div class="chat-cont-left">
 										<div class="chat-users-list">
 											<div class="chat-scroll">
-												<a href="javascript:void(0);" class="media d-flex">
+												<a href="javascript:void(0);" class="media d-flex justify-content-between">
 													<div class="media-img-wrap flex-shrink-0">
 														<div class="avatar avatar-away">
-															<img src="assets/img/user/user1.jpg" alt="User Image" class="avatar-img rounded-circle">
+															<img src="assets/img/user/user1.jpg" alt="User Image" class="avatar-img rounded-circle ">
 														</div>
 													</div>
 													<div class="media-body flex-grow-1">
