--- a/corpu/index.html
+++ b/corpu/index.html
@@ -83,7 +83,7 @@
                                 <a href="">Course</a>
                             </li>
                             <li class="has-submenu">
-                                <a class="" href="">Knowledge  <i class="fas fa-chevron-down"></i></a>
+                                <a class="" href="">Knowledge <i class="fas fa-chevron-down"></i></a>
                                 <ul class="submenu">
                                     <li class="has-submenu">
                                         <a class="" href="">Expert Locator </a>
@@ -135,9 +135,12 @@
                 <div class="col-xl-6 col-lg-8 col-md-12 col-12" data-aos="fade-down">
 
                     <div class="home-three-slide-face">
-                        <img class="img-fluid mb-2 rounded shadow d-sm-none" src="assets/img/slider/home-slider.png" alt="" style="margin-top:-70px;">
+                        <div>
+                            <img class="img-fluid mb-2 rounded shadow d-sm-none" src="assets/img/slider/home-slider.png"
+                                 alt="">
+                        </div>
                         <div class="home-three-slide-text">
-                            <h5>You're Learning Bussines Partner</h5>
+                            <h5>asd</h5>
                             <h1>Engaging <span>&</span> Accessible Online Courses For Our Employee</h1>
                             <p>Welcome to Kimia Farma's Corporate University Learning Management System (LMS). We are
                                 excited to offer a dynamic and user-friendly platform that provides access to our
@@ -169,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-4 col-md-6 col-12" data-aos="fade-up">
-                    <div class="girl-slide-img aos">
+                    <div class="girl-slide-img aos" style="background: radial-gradient(ellipse farthest-corner at 60%, rgba(0,0,0,1) 0%,rgba(0,0,0,0.5) 10%,rgba(0,0,0,0.3) 20%,rgba(0,0,0,0.0) 30%,rgba(0,0,0,0) 40%,rgba(0,0,0,0) 50%,rgba(0,0,0,0) 60%,rgba(0,0,0,0) 70%,rgba(0,0,0,0) 80%,rgba(0,0,0,0) 100%);">
                         <img class="img-fluid" src="assets/img/slider/home-slider.png" alt="">
                     </div>
                 </div>
@@ -193,21 +196,6 @@
                                     <div class="course-content-three">
                                         <h4 class="text-blue"><span class="counterUp">10</span>K</h4>
                                         <p>Online Courses</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-1-5 col-md-6 d-flex" data-aos="fade-up">
-                        <div class="course-details-three">
-                            <div class="align-items-center">
-                                <div class="course-count-three course-count ms-0">
-                                    <div class="course-img">
-                                        <img class="img-fluid" src="assets/img/icon-three/course-01.svg" alt="">
-                                    </div>
-                                    <div class="course-content-three">
-                                        <h4 class="text-blue"><span class="counterUp">10</span>K</h4>
-                                        <p>Event Training</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,6 +246,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-1-5 col-md-6 d-flex" data-aos="fade-up">
+                        <div class="course-details-three">
+                            <div class="align-items-center">
+                                <div class="course-count-three course-count ms-0">
+                                    <div class="course-img">
+                                        <img class="img-fluid" src="assets/img/icon-three/course-01.svg" alt="">
+                                    </div>
+                                    <div class="course-content-three">
+                                        <h4 class="text-blue"><span class="counterUp">10</span>K</h4>
+                                        <p>Event Training</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -4021,7 +4025,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12" data-aos="fade-right">
                         <div class="award-three-images-one">
-                            <img class="img-fluid shadow rounded" src="assets/img/students/award-01.png" alt="image-banner"
+                            <img class="img-fluid shadow rounded" src="assets/img/students/award-01.png"
+                                 alt="image-banner"
                                  title="image-banner">
                         </div>
                     </div>
@@ -4034,7 +4039,8 @@
                                 </div>
                                 <div class="award-list-content">
                                     <h2>VISION</h2>
-                                    <p>Menjadi center of excellence dalam pencapaian visi, misi, dan sasaran strategis PT. Kimia Farma, Tbk.</p>
+                                    <p>Menjadi center of excellence dalam pencapaian visi, misi, dan sasaran strategis
+                                        PT. Kimia Farma, Tbk.</p>
                                 </div>
                             </div>
                         </div>
@@ -4067,7 +4073,8 @@
 										<span class="award-icon">
 											<img src="assets/img/icon-three/check-round-3.svg" alt="" class="w-10">
 										</span>
-                                <p>Mempercepat transformasi bisnis melalui peningkatan pembelajaran dan manajemen pengetahuan untuk mendorong inovasi</p>
+                                <p>Mempercepat transformasi bisnis melalui peningkatan pembelajaran dan manajemen
+                                    pengetahuan untuk mendorong inovasi</p>
                             </div>
                             <div class="award-list d-flex align-items-center">
 										<span class="award-icon">
