--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                             Tasikmalaya yang berfokus pada Frontend Dev dan Mobile Dev. Menikmati membangun semuanya
                             dari situs app kecil hingga app yang elegan. </p>
                         <p class="text-center z-50 xl:text-left">Lihat<a
-                                href="https://maulana-reza.github.io/portfolio"><span class="font-semibold underline"> Portfolio Saya</span></a>
+                                href="https://drive.google.com/file/d/154cEt1fESJDoaEdX6VqtiG0DzkatKVAs/view?usp=sharing"><span class="font-semibold underline"> Portfolio Saya</span></a>
                             dan juga <a
-                                    href="https://drive.google.com/file/d/122-6YRTPQ13qdCo3AnaPByW5-JekL7VK/view?usp=sharing"
+                                    href="https://drive.google.com/file/d/1HyMRhkJUaqJuGiMcYGLxuYExbYNLh38X/view?usp=sharing"
                                     target="_blank" rel="noreferrer"><span
                                     class="font-semibold underline">Unduh CV Saya</span></a></p></div>
                     <div class="xl:w-5/12 flex xl:justify-end justify-center h-80 "><span
